# black_litterman_project

./: .env.example  .gitattributes  .gitignore  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
data/sample/: company_sentiment.parquet  financial_wide.parquet  macro.parquet  post_data.parquet  target_master.parquet
docs/concept/: 01-what-is-black-litterman.md  02-mathematical-structure.md  03-why-overlooked-and-limitations.md  04-ai-augmentation-and-explainability.md
docs/design/: 01-system-architecture.md  02-data-pipeline.md  03-bl-model-design.md  04-compute-design.md  05-dashboard-design.md
docs/design/adr/: ADR-0001-compute-backend.md  ADR-0002-storage-format.md  ADR-0003-identifier-mapping.md  ADR-0004-leakage-free-training.md
docs/planning/: 01-project-overview.md  02-prd.md  03-roadmap.md  04-glossary.md
site/: data.js  data.json  index.html
src/bl/: __init__.py  cli.py  pipeline.py
src/bl/common/: __init__.py  compute.py  config.py  dates.py  http.py  identifiers.py  io.py  logging.py
src/bl/engine/: __init__.py  covariance.py  inputs.py  optimize.py
src/bl/enrich/: __init__.py  sentiment.py
src/bl/eval/: __init__.py  backtest.py  calibrate.py
src/bl/features/: __init__.py  builder.py  scaler.py
src/bl/ingest/: __init__.py  financial.py  macro.py  news.py  post.py
src/bl/models/: __init__.py  anomaly.py  growth_churn.py  validation.py
src/bl/refine/: __init__.py  news_dedup.py
src/bl/serve/: __init__.py  dashboard_data.py  dashboard_html.py  ledger.py  mart.py
src/bl/synth/: __init__.py  generate.py
src/bl/universe/: __init__.py  master.py
tests/: test_backtest.py  test_calibrate.py  test_compute.py  test_config.py  test_engine.py  test_enrich_sentiment.py  test_identifiers.py  test_ingest.py  test_inputs.py  test_integration.py  test_io.py  test_ledger.py  test_mart.py  test_pipeline_demo.py  test_review_fixes.py  test_smoke.py  test_treatment.py  test_universe.py
